--- a/boston_preproc.ipynb
+++ b/boston_preproc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "3ea475aa-c40d-47b7-b651-73f011bc7109",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "id": "a91d1aba-d10f-47b6-bd2a-9e08ecc765f1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "id": "9c65e2e6-33b7-460b-8d06-74b7ebfc3157",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "id": "90ddbace-27ba-44e9-903d-412e3a0e5a65",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "[262 rows x 11 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"new_boston.csv\")"
+    "# data.to_csv(\"new_boston.csv\")"
    ]
   },
   {
@@ -425,8 +425,355 @@
    "execution_count": null,
    "id": "af58a248-a740-41bb-a2b7-dc6ed52d207f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['restaurants', 'coffee', 'newamerican', 'french', 'sandwiches',\n",
+       "       'cafes', 'indpak', 'sushi', 'japanese', 'chinese', 'mexican',\n",
+       "       'thai', 'pizza', 'donuts', 'bakeries', 'italian', 'vietnamese',\n",
+       "       'ethnicmarkets'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['search category'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3c0cbb-5a96-4956-91c3-220129479301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['search category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1faeaa-9e13-420d-a5c6-1f0b55e4d378",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(filter1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6657273a-e198-43b0-a281-c216d1aefcee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter1 = []\n",
+    "for x in data['search category']:\n",
+    "    if x in ['coffee','bakeries','cafes', 'donuts']:\n",
+    "        filter1.append('cb')\n",
+    "    elif x == 'ethnicmarkets':\n",
+    "            filter1.append('market')\n",
+    "    else:\n",
+    "        filter1.append('restaurant')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b630860-9017-4b02-a6a5-102008e77b60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['filter1'] = filter1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90524df8-124d-4fb2-97a4-aa1fe327efd7",
+   "metadata": {},
+   "source": [
+    "In the original dataset, \"categories\" column is a string of a double bracketed list. The following lambda function takes the first object of that list into \"filter2\" column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "676f06a6-5e51-4965-9135-a4d6ae0f265e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = df.apply(lambda x: x.str.replace(',', ''))\n",
+    "data['filter2'] = data['categories'].apply(lambda x: x.replace('[','').replace(']','').replace('\"','').split(',')[0].strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d681a207-184d-4c7c-aad2-be91ce5658fa",
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "169aa9a4-eca8-4ece-8161-b9232039d0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Breakfast & Brunch', 'Mexican', 'Japanese', 'Italian', 'Seafood',\n",
+       "       'American (New)', 'Mediterranean', 'Spanish', 'Pizza',\n",
+       "       'Sandwiches', 'Juice Bars & Smoothies', 'Indian', 'Belgian',\n",
+       "       'American (Traditional)', 'Korean', 'Coffee & Tea', 'Cafes',\n",
+       "       'Grocery', 'Bakeries', 'Bars', 'Lounges', 'Cocktail Bars',\n",
+       "       'French', 'Desserts', 'Delis', 'Sushi Bars', 'Bubble Tea',\n",
+       "       'Diners', 'Vegan', 'Pakistani', 'Chinese', 'Asian Fusion', 'Ramen',\n",
+       "       'Mongolian', 'Vietnamese', 'Dim Sum', 'Cantonese', 'Food Trucks',\n",
+       "       'Thai', 'Ice Cream & Frozen Yogurt', 'Donuts', 'Greek', 'Polish',\n",
+       "       'Ethnic Food'], dtype=object)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter2unique = data.filter2.unique()\n",
+    "filter2unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "bb0ec849-1877-47f4-b8b4-97dd0b2406af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newfilter1 = []\n",
+    "\n",
+    "# filter criteria\n",
+    "cb = ['Breakfast & Brunch','Coffee & Tea','Bakeries','Cafes','Donuts'] # cafes, bakeries\n",
+    "market = ['Delis','Grocery'] # markets\n",
+    "dd = ['Juice Bars & Smoothies','Bubble Tea','Ice Cream & Frozen Yogurt','Desserts','Bars','Lounges','Cocktail Bars'] #drinks, desserts\n",
+    "\n",
+    "for x in range(len(data)):\n",
+    "    row = data.iloc[x,:]\n",
+    "    if (row['filter2'] in cb) or (row['filter1']=='cb'):\n",
+    "        newfilter1.append('cb')\n",
+    "    elif (row['filter2'] in market) or (row['filter1'] == 'market'):\n",
+    "        newfilter1.append('market')\n",
+    "    elif row['filter2'] in dd:\n",
+    "        newfilter1.append('dd')\n",
+    "    else:\n",
+    "        newfilter1.append('restaurant')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "1e6f480f-1a9e-40d9-af18-6111fa425878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['filter1'] = newfilter1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "51aae1a9-6672-4f54-92c2-860c76ac9590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Mexican', 'Japanese', 'Italian', 'Seafood', 'American (New)',\n",
+       "       'Mediterranean', 'Spanish', 'Pizza', 'Sandwiches', 'Indian',\n",
+       "       'Belgian', 'American (Traditional)', 'Korean', 'French',\n",
+       "       'Sushi Bars', 'Diners', 'Pakistani', 'Chinese', 'Asian Fusion',\n",
+       "       'Ramen', 'Mongolian', 'Vietnamese', 'Dim Sum', 'Cantonese',\n",
+       "       'Food Trucks', 'Thai'], dtype=object)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(data[data['filter1']=='restaurant']['filter2'].unique()))\n",
+    "data[data['filter1']=='restaurant']['filter2'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "e377a7d0-8c57-4cbb-a821-2ac4ae9655ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I'm sorry but we need to condense this 26 is too much\n",
+    "# I apologize for culturally lumping these\n",
+    "\n",
+    "## American: new, traditional\n",
+    "\n",
+    "## Japanese: Japanese, Sushi Bars, Ramen\n",
+    "\n",
+    "## Italian: Italian, Pizza\n",
+    "\n",
+    "## Chinese: Cantonese, Dim Sum, Chinese"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "753578ed-bd3c-4766-99c9-67f18ef8dcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter2new = []\n",
+    "am = ['American (Traditional)','American (New)']\n",
+    "jpn = ['Sushi Bars','Ramen']\n",
+    "itl = ['Pizza']\n",
+    "cn = ['Dim Sum','Cantonese']\n",
+    "\n",
+    "for x in range(len(data)):\n",
+    "    row = data.iloc[x,:]\n",
+    "    f2 = row['filter2']\n",
+    "    if f2 in am:\n",
+    "        filter2new.append('American')\n",
+    "    elif f2 in jpn:\n",
+    "        filter2new.append('Japanese')\n",
+    "    elif f2 in itl:\n",
+    "        filter2new.append('Italian')\n",
+    "    elif f2 in cn:\n",
+    "        filter2new.append('Chinese')\n",
+    "    else:\n",
+    "        filter2new.append(f2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "6bb3f8fd-7ab5-41e4-ae84-feb5e9f54c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['filter2'] = filter2new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "cf4975ba-43c7-4a4d-aa8a-fec58551f795",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Mexican', 'Japanese', 'Italian', 'Seafood', 'American',\n",
+       "       'Mediterranean', 'Spanish', 'Sandwiches', 'Indian', 'Belgian',\n",
+       "       'Korean', 'French', 'Diners', 'Pakistani', 'Chinese',\n",
+       "       'Asian Fusion', 'Mongolian', 'Vietnamese', 'Food Trucks', 'Thai'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## check filter2 cats\n",
+    "print(len(data[data['filter1']=='restaurant']['filter2'].unique()))\n",
+    "data[data['filter1']=='restaurant']['filter2'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ba401e5-4f34-4b59-bff6-ae21b70832a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can live with 20 i guess :') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "2e511dd9-167c-4407-91bc-5ebc80e71178",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Juice Bars & Smoothies', 'Bars', 'Lounges', 'Cocktail Bars',\n",
+       "       'Desserts', 'Bubble Tea', 'Ice Cream & Frozen Yogurt'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['filter1']=='dd']['filter2'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "7e955150-5028-4b88-9d10-6a9530914082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('new_boston.csv')"
+   ]
   }
  ],
  "metadata": {
@@ -445,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
